--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
 .App {
   text-align: center;
 }
-
+.gb {
+  text-decoration: underline;
+}
+.mr {
+  margin-left: 10px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
